# minimind

./: pyproject.toml
scripts/: convert_jit_model.py  convert_model.py
trainer/: train_pretrain.py
